--- a/Read/ReadAndroid/00.方案实践/26.线程优化实践操作.md
+++ b/Read/ReadAndroid/00.方案实践/26.线程优化实践操作.md
@@ -2,9 +2,8 @@
 - 01.线程优化的背景
     - 1.1 实践背景说明
     - 1.2 遇到场景记录
-    - 1.3 查找线程的来源
-    - 1.4 查看项目的线程
-    - 1.5 查找线程来源
+    - 1.3 线程优化整体思路
+    - 1.4 查找线程的来源
 - 02.线程现状和改造
     - 2.1 线程使用问题
     - 2.2 线程问题有哪些
@@ -24,22 +23,36 @@
     - 4.4 HandlerThread
     - 4.5 IntentService
     - 4.6 线程池Executors
-- 05.高效的使用线程
-    - 5.1 多线程安全问题
-    - 5.2 频繁发送消息问题
-    - 5.3 轻量级线程池
-    - 5.4 异步线程管理
-    - 5.5 线程绑定生命周期
-    - 5.6 排查线程CPU使用率飙升
-- 06.优化线程的使用
-    - 6.1 设置线程优先级方式
-    - 6.2 避免Thread直接创建
-- 07.线程卡顿是怎么回事
-    - 7.1 线程如何卡顿
-    - 7.2 如何模拟线程卡顿
-    - 7.3 如何解决线程卡顿
-
-
+- 05.如何检测线程
+    - 5.1 线程检测方式
+    - 5.2 Profiler检测线程
+    - 5.3 ADB获取检测线程
+    - 5.4 getAllStackTraces获取线程
+    - 5.5 读取伪文件检测线程
+- 06.如何去统计线程
+    - 6.1 创建线程的方式
+    - 6.2 创建线程池的方式
+    - 6.3 扫描线程和线程池
+    - 6.4 扫描结果统计分析
+- 07.线程优化思路
+    - 7.1 优化线程思路
+    - 7.2 优化线程池思路
+    - 7.3 行业优化方案思路
+- 08.高效的使用线程
+    - 8.1 多线程安全问题
+    - 8.2 频繁发送消息问题
+    - 8.3 轻量级线程池
+    - 8.4 异步线程管理
+    - 8.5 线程绑定生命周期
+    - 8.6 排查线程CPU使用率飙升
+- 09.优化线程的使用
+    - 9.1 设置线程优先级方式
+    - 9.2 避免Thread直接创建
+- 10.线程卡顿是怎么回事
+    - 10.1 线程如何卡顿
+    - 10.2 如何模拟线程卡顿
+    - 10.3 线程卡顿监控耗时
+    - 10.4 如何解决线程卡顿
 
 
 
@@ -49,6 +62,10 @@
     - 1.编译器自带的profiler工具显示项目在启动阶段有上百个线程被创建，这么多的线程真的都是由App创建的吗？
     - 2.过多的线程不仅仅带来了内存上的消耗同时也降低了cpu调度的效率，过多的cpu调度带来的消耗的坏处甚至超过了多线程带来的好处。
     - 3.每个设备能够创建的线程数是有限的，创建的线程数超限就会发生崩溃。为解决线程数超限带来的崩溃问题就需要降低线程的个数，既然需要降低线程的个数，那需要查找线程的来源。
+- 线程带来一定的压力，主要表现在以下几个方面：
+    - 线程数量增多：一些库可能会在后台启动一些线程来执行任务，这样会增加系统中线程的数量，从而导致系统资源的浪费。
+    - 线程竞争：一些库可能会在同一时间启动多个线程来执行任务，这样会导致线程之间的竞争，从而影响程序的执行效率。
+    - 线程阻塞：一些库可能会在执行任务时阻塞主线程，从而导致程序的卡顿和响应速度变慢。
 
 
 
@@ -64,29 +81,22 @@
 
 
 
-#### 1.3 查找线程的来源
+#### 1.3 线程优化整体思路
+- 为了解决线程问题，用下面的思路来进行线程优化：
+    - 线程检测，评估优化空间。
+    - 线程统计，收集优化范围。
+    - 线程和线程池优化，线程数收敛。
+    - 线程栈裁剪，减少线程内存。
+
+
+
+
+#### 1.4 查找线程的来源
 - 如何查找线程的来源？
     - 新建一个空项目，创建完成后不添加任何代码直接运行项目，然后查看profiler中显示的线程，可以发现profiler中显示有10多个线程。
     - 通过线程名，大致可以推测出线程的创建者分别有安卓系统、profile自身、Android Studio等，除此之外还有主线程。
 - 主要是哪些线程呢？
     - 一个空项目，至少包含主线程main、Binder线程，FinalizerDaemon线程、FinalizerWatchdog线程、RenderThread、ReferenceQueued、HeapTaskDaemon、SignalCatcher、GCDaemon等等。
-
-
-#### 1.4 查看项目的线程
-- 首先查看进程
-    - 通过命令查看App存在的进程，主要是获取uid数据：adb shell ps | grep com.zuoyebang.iotunion
-- 然后通过进程uid获取线程
-    - 通过命令行初步查看uid对应进程的线程：adb shell ps -T | grep u0_a579
-- 分析进程中创建的线程
-    - 这些线程有系统的线程，系统的线程占了很大一部分。剩下就是业务自己创建的线程以及三方库创建的线程，接下来就是要查找出线程的来源。
-    - 创建线程就需要调用线程的构造方法，所以可以hook线程的构造方法，然后获取堆栈，这样就能知道线程的来源。
-
-
-#### 1.5 查找线程来源
-- epic是一个可以hook的框架
-    - 可以hook普通方法、构造方法、系统方法，但是存在兼容性问题，在一些设备上运行会崩溃，该框架已经很久没维护了。
-- aspectj是基于AspectJ
-    - 在此基础上扩展出来可应用于Android开发平台的AOP框架，可作用于java源码，class文件及jar包，同时支持kotlin的应用，但是在高版本的gradle上会出现编译问题。
 
 
 
@@ -110,7 +120,7 @@
 #### 2.4 常规解决方案
 - 第一种：团队增加cr机制，review代码准入
     - 比如定制Thread的规范，又或者是定义项目统一的线程池，在项目中去使用。这个方案优点就是可操作性强，便于团队去实施。
-- 第二种：
+- 第二种：字节码插桩监控线程
     - 通用的方案实践，比较流行的方案是通过字节码插桩的方式，统一做线程监控亦或进行线程统一，比如监控处理的matrix，还有优化相关的booster等。
 
 
@@ -265,15 +275,170 @@
 
 
 
-### 05.高效的使用线程
-#### 5.1 多线程安全问题
+### 05.如何检测线程
+#### 5.1 线程检测方式
+- 第一种方式：使用Studio Profiler工具
+    - 该工具优点：使用方便，实时性强，线程统计完整。缺点：无法对线程状态进行分组查看。
+- 第二种方式：使用adb命令，adb shell ps | grep
+    - 该工具优点：线程统计完整。缺点：命令行方式使用不变，可读性比较差。
+- 第三种方式：Thread.getAllStackTraces()
+    - 该工具优点：使用方便，返回信息已经封装。缺点：获取到的是当前线程组的线程，不是很完整。
+- 第四种方式：读取伪文件系统的线程信息
+    - 该工具优点：实时性较高，线程统计完整。缺点：需要对文件内容进行解析。
+
+
+
+
+#### 5.2 Profiler检测线程
+
+
+
+#### 5.3 ADB获取检测线程
+- 首先查看进程
+    - 通过命令查看App存在的进程，主要是获取uid数据：adb shell ps | grep com.zuoyebang.iotunion
+- 然后通过进程uid获取线程
+    - 通过命令行初步查看uid对应进程的线程：adb shell ps -T | grep u0_a579
+- 分析进程中创建的线程
+    - 这些线程有系统的线程，系统的线程占了很大一部分。剩下就是业务自己创建的线程以及三方库创建的线程，接下来就是要查找出线程的来源。
+    - 创建线程就需要调用线程的构造方法，所以可以hook线程的构造方法，然后获取堆栈，这样就能知道线程的来源。
+
+
+#### 5.4 getAllStackTraces获取线程
+
+
+#### 5.5 读取伪文件检测线程
+
+
+
+
+### 06.如何去统计线程
+- 如何使用命令行看字节码
+    - 首先使用命令行输入：javac Xx.java。然后会编译出一个后缀名为.class的文件。
+    - 接着通过javap查看字节码，这里输入命令：javap -c Xx。
+
+
+#### 6.1 创建线程的方式
+- 创建线程的方式
+    - 第一种：Thread
+    - 第二种：Timer
+    - 第三种：HandlerThread
+    - 第四种：AsyncTask
+- 了解线程创建和对应的字节码
+- 普通线程创建的代码如下所示
+    ```
+    Thread thread = new Thread(new Runnable() {
+        @Override
+        public void run() {
+
+        }
+    }, "job");
+    ```
+- 该源码对应的字节码如下所示
+    ```
+    class java/lang/Thread
+    Method java/lang/Thread."<init>": (Ljava/lang/Runnable;Ljava/lang/String;)V
+    Method java/lang/Thread.start:()V
+    ```
+
+
+
+#### 6.2 创建线程池的方式
+- 创建线程池的方式
+    - 第一种：ThreadPoolExecutor
+    - 第二种：Executors
+    - 第三种：ScheduledThreadPoolExecutor
+- 了解线程池创建和对应的字节码
+    ```
+    ThreadPoolExecutor poolExecutor = new ThreadPoolExecutor(Runtime.getRuntime().availableProcessors(),
+            Runtime.getRuntime().availableProcessors() * 2,
+            0L, TimeUnit.MILLISECONDS,
+            new LinkedBlockingQueue<Runnable>(),
+            new ThreadFactory() {
+                @Override
+                public Thread newThread(Runnable r) {
+                    Thread thread = new Thread(r);
+                    thread.setDaemon(true);
+                    return thread;
+                }
+            });
+    ```
+- 该源码对应的字节码如下所示
+    ```
+    class java/util/concurrent/ThreadPoolExecutor
+    Method java/util/concurrent/ThreadPoolExecutor."<init>":(IIJLjava/util/concurrent/TimeUnit;Ljava/util/concurrent/BlockingQueue;Ljava/util/concurrent/ThreadFactory;)V
+    ```
+
+
+
+#### 6.3 扫描线程和线程池
+- 如何扫描线程和线程池
+    - 扫描工具：可以使用ASM工具
+    - 扫描条件：匹配方法名，方法描述等等
+    - 扫描结果：按照不同lib库分类和统计
+- 如何选择合适技术
+    - 插桩的框架，我选择的是ASM，因为使用ASM进行插桩具有高效性、灵活性、易用性、兼容性和社区活跃等优点，是一种比较优秀的字节码操作框架，对于提高应用程序的性能和可维护性具有重要意义。
+- 那么通过ASM是如何扫描到的呢？
+    - 要扫描到创建线程池的类名，你需要使用ASM的访问者模式（Visitor Pattern）来遍历字节码中的方法和指令。
+    - 在遍历过程中，当遇到创建线程的指令（如：new java/util/concurrent/ThreadPoolExecutor）时，就可以获取到创建线程的类名。
+
+
+
+
+#### 6.4 扫描结果统计分析
+
+
+### 07.线程优化思路
+#### 7.1 优化线程思路
+- 对于APP业务层和自研SDK
+    - 检查是否真的需要直接new thread，能否用线程池代替，如果必须创建单个线程，那我们创建的时候必须加上线程名，方便排查线程问题。
+
+
+
+#### 7.2 优化线程池思路
+- 对于APP业务层
+    - 需要提供常用线程池，例如I/O、CPU、Single、Cache等等线程池，避免开发各自创建重复的线程池。
+- 对于自研SDK
+    - 尽量让架构组的开发同学提供可以设置自定义线程池的能力，方便我们代理到我们APP业务层的线程池。
+- 对于三方SDK
+    - 进行插桩来进行线程池收敛。在进行三方SDK插桩代理的时候，需要注意三点：
+    - 设置白名单，进行逐步代理。
+    - 针对不同的SDK，要区分是本地任务还是网络任务，这样能明确是代理到I/O线程池还是CPU线程池。
+    - 设置降级开关，方便线上有问题时，及时对单个SDK进行降级处理。
+
+
+
+#### 7.3 行业优化方案思路
+- 反射收敛，但是使用反射来收敛线程池的确有一些潜在的弊端
+    - 性能开销：反射在执行时需要进行一系列的检查和解析，这会比直接的Java方法方法调用带来更大的性能开销。
+    - 安全问题：反射可以访问所有的字段和方法，包括私有有的和受保护的，这可能会破坏对象的封装性，导致安全问题。
+    - 代码复杂性：使用反射的代码通常比直接的Java代码更复杂，更难理解和维护。
+- 代理收敛，但是使用代理设计模式来收敛线程池也有一些潜在的弊端
+    - 增加复杂性：代理方式会引入额外的类和对象，这会增加系统的复杂性。对于简单的问题，使用代理可能会显得过于复杂。
+    - 代码可读性：由于代理方式涉及到额外的抽象层，这可能会对代码的可读性产生一定的影响。
+    - 调试困难：由于代理模式的存在，错误可能会被掩盖或者难以定位，这可能会使得调试变得更加困难。
+- 插桩收敛，虽然插桩也有一些不足之处，但也有不少优点
+    - 可能影响程序行为：如果插桩代码改变了程序的状态或者影响了线程的线程的调度，那么它可能会改变程序的行为。
+    - 可能引入错误：如果插桩代码桩代码本身存在错误，那么它可能会引入新的错误到程序中。
+    - 直接性：插桩直接在代码中插入额外的逻辑，不需要通过代理或反射射间接地操作对象，这使得插桩更直接，更易于理解和控制。
+    - 灵活活性：插桩可以在任何位置插入代码，，这提供了很大的灵活性。而代理和反射通常只能操作公开的接口和方法。
+    - 无需修改原始代码：插桩通常常不需要常不需要修改原始的线程池代码，这使得它可以在不影响原始代码的情况下收集信息。
+    - 颗粒度控制：可以对某个方法或某段代码进行线程收敛，而不是整个应用程序。
+
+
+
+
+
+
+
+### 08.高效的使用线程
+#### 8.1 多线程安全问题
 - 线程安全问题
     - 使用多线程时需要注意的是线程安全的问题, 因为同一进程中的线程可以共享内存, 虽然这种方式效率很高, 但是会导致线程干扰和内存一致性的问题。[博客](https://github.com/yangchong211/YCBlogs)
 - 锁机制
     - 解决这些问题的主要方法是使用Synchronized关键字来加锁. 基本原理就是线程要对对象进行操作前需要先获取锁, 如果一个线程正在操作某个对象, 那么它就会持有相应的锁, 后来的线程想要操作这个对象, 只能等待前面的线程释放锁之后才有机会获取锁并进行操作.
 
 
-#### 5.2 频繁发送消息问题
+#### 8.2 频繁发送消息问题
 - 频繁发送消息，处理消息不靠谱的，引起不靠谱的原因有如下
     - 发送的消息太多，Looper负载越高，任务越容易积压，进而导致卡顿
     - 消息队列有一些消息处理非常耗时，导致后面的消息延时处理
@@ -302,7 +467,7 @@
     ```
 
 
-#### 5.6 排查线程CPU使用率飙升
+#### 8.6 排查线程CPU使用率飙升
 - 首先模拟一个CPU高使用率场景
     ``` java
     public class HighCpuTest {
@@ -344,8 +509,8 @@
 
 
 
-### 06.优化线程的使用
-#### 6.1 设置线程优先级方式
+### 09.优化线程的使用
+#### 9.1 设置线程优先级方式
 - 在 Android 中，有两种常见的设置线程优先级的方式：
     - 第一种，使用 Thread 类实例的 setPriority 方法，来设置线程优先级。
     - 第二种，使用 Process 类的 setThreadPriority 方法，来设置线程优先级。
@@ -356,25 +521,37 @@
 
 
 
-#### 6.2 避免Thread直接创建
+#### 9.2 避免Thread直接创建
 
 
 
 
-### 07.线程卡顿是怎么回事
-#### 7.1 线程如何卡顿
+### 10.线程卡顿是怎么回事
+#### 10.1 线程如何卡顿
 
 
-#### 7.2 如何模拟线程卡顿
+#### 10.2 如何模拟线程卡顿
 
 
-#### 7.3 如何解决线程卡顿
-
-
+#### 10.3 如何解决线程卡顿
 
 
 
 
+### 参考内容
+- 线程卡顿耗时监控项目
+  - MonitorThread，线程阻塞监控库
+- 轻量级统一线程池库
+  - EasyExecutor，
+- 异步线程池库
+  - ThreadPoolLib，
+- 线程Debug调试库
+  - ThreadDebugLib，
+- HandlerThread库
+  - HandlerThread，
+
+
+# 1
 - 思考一些问题
     - 了解了如何创建线程，来执行异步任务，那么如果大量的使用线程，会不会影响 UI 线程呢？会不会产生卡顿呢?答案是肯定的。
     - 因为用户手机的 CPU 资源是有限的，内存也是有限的，如果无节制的同一时刻创建的大量的线程，就会导致线程和 UI 线程同时抢占 CPU 资源，造成 UI 线程执行变慢，产生卡顿等问题；
@@ -396,7 +573,8 @@
     - https://www.jianshu.com/p/a4efccd09e02
 - Android性能优化-线程监控与线程统一
     - https://juejin.cn/post/7143944351016550437
-
+- Android线程优化这件事
+  - https://juejin.cn/post/7287913415812202507
 
 
 
