--- a/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
+++ b/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
@@ -17,6 +17,7 @@
     - 3.1 本地加密
     - 3.3 接口签名
     - 3.4 TCP协议安全攻击
+    - 3.5 防抓包安全
 - 06.方案基础设计
     - 6.1 整体架构图
     - 6.2 UML设计图
@@ -156,6 +157,21 @@
 
 #### 3.4 TCP协议安全攻击
 - https://zhuanlan.zhihu.com/p/620050694
+
+
+
+#### 3.5 防抓包安全
+- 客户端抓包的突破口集中以下几点
+    - 第一点：必须链接代理，且跟Charles要具有相同ip。**思路：客户端是否可以判断网络是否被代理了**。
+    - 第二点：CA证书，这一块避免使用黑科技hook证书校验代码，或者拥有修改CA证书权限。**思路：集中在可以判断是否挂载**。
+    - 第三点：冒充中间人CA证书，在客户端client和服务端server之间篡改拦截数据。**思路：可以做CA证书校验**。
+    - 第四点：为了可以在7.0上抓包，App往往配置清单文件networkSecurityConfig。**思路：线上环境去掉该配置**。
+- 刷掌SDK网络安全实践操作
+    - 第一种，sdk网络请求默认设置关闭代理【厂商这边也可以通过配置打开支持代理】，避免代理抓包
+    - 第二种，设置配置文件，配置networkSecurityConfig清单文件的system和user权限去掉，只有这样才不会信任用户证书。不信任证书，自然增加抓包难度！
+    - 第三种，数据加解密，可以保证接口请求安全性！
+    - 第四种，sign签名，即使别人拿到token，通过对请求参数md5 + 时间戳，即可最大程度保证安全！该方案，需要跟服务端一起做，待定！
+    - 第五种，CA证书校验，可以有效防止抓包，保证数据安全
 
 
 
