--- a/Read/ReadAndroid/01.大型方案/05.心跳和轮询方案设计.md
+++ b/Read/ReadAndroid/01.大型方案/05.心跳和轮询方案设计.md
@@ -30,7 +30,6 @@
 
 
 
-
 ### 01.项目整体概述
 #### 1.1 业务背景介绍
 - 实时推送
@@ -244,6 +243,19 @@
 
 
 
+### 参考内容
+- 线程循环抽象库
+  - LooperThread，轮询工具库
+- 心跳工具库
+  - HeartBeatServer，
+- 长连接推送库
+  - WebSocketLib，
 
 
+- WebSocket安卓客户端实现及代码封装
+    - https://mp.weixin.qq.com/s?__biz=MzA5MzI3NjE2MA==&mid=2650243616&idx=1&sn=7d7d270461965cdcecfabedbc40d43ac&chksm=8863734fbf14fa59c2f50b826270a15bd86ca13e689efc153d1c10835271e87d070a99d18bd3&scene=38#wechat_redirect
+- 源码角度，分析OkHttp实现WebSocket | 握手/保活/数据处理...
+    - https://mp.weixin.qq.com/s/oRwUhGELgSD9ih1fhucLpw
+- 雨露均沾的OkHttp—WebSocket长连接（使用篇）
+    - https://juejin.cn/post/6847009772198166536
 
