--- a/Read/ReadAndroid/01.大型方案/14.ASM实践方法耗时统计.md
+++ b/Read/ReadAndroid/01.大型方案/14.ASM实践方法耗时统计.md
@@ -11,3 +11,5 @@
 - https://github.com/re-chen/MethodTimeMonitor
 - 一个能让你了解所有函数调用顺序以及函数耗时的Android库
     - https://github.com/zjw-swun/AppMethodOrder
+- Gradle基础与应用（插桩）
+  - https://juejin.cn/post/7277490240171737100
