--- a/Read/ReadShareWiki/06.搞钱搞钱/02.一件代发注意项.md
+++ b/Read/ReadShareWiki/06.搞钱搞钱/02.一件代发注意项.md
@@ -1,6 +1,5 @@
 # 02.一件代发注意项
 #### 目录介绍
-- 00.
 - 01.什么叫一件代发
 - 02.一件代发的特点
 - 03.注意事项的说明
@@ -24,11 +23,12 @@
 
 ### 03.注意事项的说明
 - 1、一手拿货、一手付款。
-- 2、查百度搜寻：此商家是否有诈骗或纠纷经验 (在商家名字后空一格输入“诈骗”骗人之类)。但也要去求证。因为有时是受同行恶意竞争的黑文。
+- 2、查百度搜寻：此商家是否有诈骗或纠纷经验。但也要去求证。因为有时是受同行恶意竞争的黑文。
 - 3、谈好退货退款方面问题。
 - 4、千万要小心商家塞了一堆“没用”的货给你，有可能是库存，也有可能是不对款(冷款)。
 - 5、物美价廉.这句话是不对的.你想代销5~20元的产品.向你保证.绝对会拿到库存货及低档货。如布料差，做工粗(制衣师傅也是有分等级的，薪水也差很多，但薪水代表他们生产出来的级数有多高)。
 - 6、先确定你要卖的客户等级如何，再去挑合适的衣服来卖，你该不会在高级区卖便宜货，在平价区卖精品货吧。
+- 7、新手最好不要选择服装类目，服装的退货率太高了，做的又是无货源的模式，售后比较多的话，真的很麻烦。选择那些退货率低售后少的商品，比如家居日用、学习用品、零食等等这些实用性比较强的产品，一般很少会退货。
 
 
 
