--- a/Read/ReadShareWiki/06.搞钱搞钱/03.选品定位的说明.md
+++ b/Read/ReadShareWiki/06.搞钱搞钱/03.选品定位的说明.md
@@ -1,4 +1,64 @@
-# 02.一件代发注意项
+# 03.选品定位的说明
 #### 目录介绍
-- 01.
+- 01.如何选合适品种
+    - 1.1 抖音选品
+    - 1.2 快手选品
+    - 1.3 拼多多选品
+    - 1.4 京东选品
+    - 1.5 亚马逊选品
+    - 1.6 淘宝选品
+- 02.如何去上架商品
+    - 2.1 上架抖音
+    - 2.2 上架快手
+    - 2.3 上架拼多多
+    - 2.4 上架京东
+    - 2.5 上架亚马逊
+    - 2.6 上架淘宝
+- 03.如何给商品定价
+    - 3.1 抖音选品定价
+    - 3.2 快手选品定价
+    - 3.3 拼多多选品定价
+    - 3.4 京东选品定价
+    - 3.5 亚马逊选品定价
+    - 3.6 淘宝选品定价
+
+
+
+### 01.如何选合适品种
+- 选品很重要
+    - 特别是对于一个新店，直接决定着你的店铺什么时候能出单，能出多少单。
+- 如何去选品
+    - 最好的方法就是利用数据找热销商品榜单，这些都是经过数据检验过的产品。
+    - 每个平台都有自己的数据网站，可以查看到热卖的商品排行榜，可以选择类目、销量、价格、佣金、转化率等等因素，来选品。
+- 举一个例子
+    - 三方平台-蝉妈妈，在这个平台上可以查找热销榜单，热销文案，热销商品
+    - 购物平台-拼多多，
+    - 购物平台-淘宝，
+
+
+
+### 02.如何去上架商品
+
+#### 2.1 上架抖音
+- 抖店做无货源的比较多，特别是刚开始的小店。
+    - 选好品之后，可以直接根据图片从淘特、拼多多上找货源，然后批量上架，出单就代发货。
+    - 陶特和拼多多上的卖家大多是厂家，价格便宜。
+    - 量跑起来之后，可以联系厂家直接走线下发货的。
+
+
+
+### 03.如何给商品定价
+- 货源平台上架的时候
+    - 设置一个售卖价，一般是原价的2倍-3倍，这中间的差价就是你的利润。
+- 设置新人折扣券
+    - 新店，除了上架的是爆款之外，如果想尽快出销量，还得有价格优势。
+    - 设置比较给力的新人折扣券，利用低价来吸引购买。
+    - 做过店铺的都知道，销量越多买的人越多，越没销量越无人问津。
+
+
+
+
+
+
+
 
