--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -32,7 +32,9 @@
     - 5.2 ProtoBuf编码方式
     - 5.3 
 - 06.gRPC核心原理
-    - 6.1 
+    - 6.1 channel通道创建
+    - 6.2 channel通道复用
+    - 
 
 
 
@@ -307,6 +309,7 @@
 
 
 
+
 #### 3.5 gRPC如何使用
 - 大概的实践步骤如下所示
     - 第一步：添加项目中build中的插件配置。添加：classpath "com.google.protobuf:protobuf-gradle-plugin:0.9.1"
@@ -386,6 +389,21 @@
 
 #### 5.2 ProtoBuf编码方式
 
+
+### 06.gRPC核心原理
+#### 6.1 channel通道创建
+
+
+#### 6.2 channel通道复用
+
+
+
+
+### 案例
+- Android使用GRPC进行通信过程解析
+  - https://www.jb51.net/article/276659.htm
+- GRPC 性能最佳做法
+  - https://learn.microsoft.com/zh-cn/aspnet/core/grpc/performance?view=aspnetcore-7.0
 
 
 #### 参考博客
