--- a/Read/ReadQuestion/01.Java相关问题汇总.md
+++ b/Read/ReadQuestion/01.Java相关问题汇总.md
@@ -107,6 +107,7 @@
 ### 08.类的加载问题
 - 类加载：Person p = new Person()请写一下类的加载过程？在加载过程分别对Person类中的常量，变量，构造方法，成员方法做了什么处理？
 - 内存分配：如何理解栈，堆，本地方法区……？堆内存设置的参数是什么？JVM中哪个参数是用来控制线程的栈堆栈小？
+- 内存模型：说一下JVM的内存模型？程序计数器，本地方法栈，Java虚拟机栈，堆，方法区，详细说一下每个的作用，以及区别？
 - 双亲委派：什么是双亲委派模型？为什么使用双亲委托模型？说一下ClassLoader中loadClass方法实现了双亲委派模型的思路？
 - 类加载器：JAVA类加载器包括几种，作用是什么？它们之间的父子关系是怎么样的？如何自定义一个类加载器(那些场景会这样)？
 - 类加载器：ClassLoader原理是什么？类加载器工作机制是什么？loadClass(String name, boolean resolve)第二个参数意义是什么？
