--- a/Read/YCBlogWiki/java/08.类的加载/08.Java内存模型详解.md
+++ b/Read/YCBlogWiki/java/08.类的加载/08.Java内存模型详解.md
@@ -12,6 +12,7 @@
     - 3.4 直接内存
 
 
+
 ### 01.JVM整体内存模型
 #### 1.1 按照私有划分
 - Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成若干个不同的数据区域。这些组成部分一些事线程私有的，其他的则是线程共享的。
@@ -54,6 +55,7 @@
 - Java虚拟机栈存放什么
     - Java虚拟机栈是由一个个栈帧组成，而每个栈帧中都拥有：局部变量表、操作数栈、动态链接、方法出口信息。
     - 局部变量表：放着基本数据类型(8种基本类型)，还有对象的引用（reference类型，它不同于对象本身，可能是一个指向对象起始地址的引用指针，也可能是指向一个代表对象的句柄或其他与此对象相关的位置）。
+    - ![image](https://img-blog.csdnimg.cn/5f1d8ec909654cb4943fe9b61dca0c21.png)
 - **Java 虚拟机栈会出现两种异常：StackOverFlowError 和 OutOfMemoryError。**
     - **StackOverFlowError：** 若Java虚拟机栈的内存大小不允许动态扩展，那么当线程请求栈的深度超过当前Java虚拟机栈的最大深度的时候，就抛出StackOverFlowError异常。
     - **OutOfMemoryError：** 若Java虚拟机栈的内存大小允许动态扩展，且当线程请求栈时内存用完了，无法再动态扩展了，此时抛出OutOfMemoryError异常。
@@ -174,7 +176,7 @@
 
 #### 3.3 运行时常量池
 - 运行时常量池：代表运行时每个class文件中的常量表。包括几种常量：编译时的数字常量、方法或者域的引用。
-    - 。Class 文件中包括类的版本、字段、方法、接口等描述信息 
+    - .Class 文件中包括类的版本、字段、方法、接口等描述信息
 - 既然运行时常量池时方法区的一部分
     - 自然受到方法区内存的限制，当常量池无法再申请到内存时会抛出 OutOfMemoryError 异常。
     - **JDK1.7及之后版本的 JVM已经将运行时常量池从方法区中移了出来，在Java堆（Heap）中开辟了一块区域存放运行时常量池。** 
