--- a/Read/YCBlogWiki/java/08.类的加载/05.双亲委派机制详读.md
+++ b/Read/YCBlogWiki/java/08.类的加载/05.双亲委派机制详读.md
@@ -17,8 +17,8 @@
 - 双亲委派模型的工作流程是：
     - 如果一个类加载器收到了类加载的请求，它首先不会自己去尝试加载这个类，而是把请求委托给父加载器去完成，依次向上。
     - 因此，所有的类加载请求最终都应该被传递到顶层的启动类加载器中，只有当父加载器在它的搜索范围中没有找到所需的类时，即无法完成该加载，子加载器才会尝试自己去加载该类。
-    - ![](http://upload-images.jianshu.io/upload_images/3985563-eb333a271ec638ef.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
+    - ![](https://img-blog.csdnimg.cn/2ad06f1815a846f2944625c20de9e24f.png)
+- 在 java.lang.ClassLoader 中的 loadClass 方法中实现该过程。
 
 
 ### 03.为何需要这样
