feat：完善请求案例

--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -49,6 +49,8 @@
     - 可扩展性：gRPC支持多种类型的RPC，包括简单RPC、流式RPC和双向流式RPC，可以满足不同的应用场景和需求。
 
 
+
+
 #### 1.2 RPC是什么
 - rpc概述
     - RPC（Remote Procedure Call）-远程过程调用，他是一种通过网络从远程计算机程序上请求服务，而不需要了解底层网络技术的协议。
@@ -61,10 +63,14 @@
     - 2.可以看出HTTP是RPC的传输协议的一个可选方案，比如说 gRPC 的网络传输协议就是 HTTP。HTTP 既可以和 RPC 一样作为服务间通信的解决方案，也可以作为 RPC 中通信层的传输协议（此时与之对比的是 TCP 协议）。
 
 
+
+
 #### 1.3 网络库收益分析
 - 使用gRPC作为网络方案可以带来以下收益：
     - 使用gRPC作为网络方案可以带来高效性、跨平台和语言、可靠性、易于使用和可扩展性等收益。
     - 同时可以减少手动编写代码的工作量，提高开发效率。
+
+
 
 
 #### 1.4 学习计划说明
@@ -396,6 +402,10 @@
 
 
 #### 6.2 channel通道复用
+- 为何通道设置成复用
+    - 对于客户端来说建立一个channel是昂贵的，因为创建channel需要连接。但是建立一个stub是很简单的，就像创建一个普通对象，因此Channel就需要复用。
+
+
 
 
 
