feat：完善请求案例

--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -8,9 +8,12 @@
     - 2.1 ProtoBuf是什么
     - 2.2 ProtoBuf和json
     - 2.3 ProtoBuf问题思考
-    - 2.4 ProtoBuf优缺点
-    - 2.5 创建proto文件
-    - 2.6 ProtoBuf核心思想
+    - 2.4 ProtoBuf特点
+    - 2.5 ProtoBuf数据结构
+    - 2.6 ProtoBuf优缺点
+    - 2.7 创建proto文件
+    - 2.8 ProtoBuf核心思想
+    - 2.9 ProtoBuf总结
 - 03.gRPC实践的介绍
     - 3.1 gRPC简单介绍
     - 3.2 为何要用gRPC
@@ -47,7 +50,6 @@
     - 可靠性：gRPC使用HTTP/2协议作为底层传输协议，可以提供更可靠的连接和流控制，同时支持TLS加密和认证。
     - 易于使用：gRPC提供了自动生成代码的工具，可以方便地生成客户端和服务器端的代码，同时提供了丰富的文档和示例。
     - 可扩展性：gRPC支持多种类型的RPC，包括简单RPC、流式RPC和双向流式RPC，可以满足不同的应用场景和需求。
-
 
 
 
@@ -166,7 +168,49 @@
 
 
 
-#### 2.4 ProtoBuf优缺点
+#### 2.4 ProtoBuf特点
+- 先看看Proto文件的一个案例
+    ```
+    message SearchRequest {
+      string query = 1;
+      int32 page_number = 2;
+      int32 result_per_page = 3;
+    }
+    ```
+- 序列化数据为何说数据小
+    - 序列化数据时，不序列化key的name，使用key的编号替代，减小数据。
+    - 如上面的数据在序列化时query ，page_number以及result_per_page的key不会参与，由编号1,2,3替代。
+    - 这样在反序列的时候可以直接通过编号找到对应的key，这样做确实可以减小传输数据，但是编号一旦确定就不可更改；
+- 没有赋值的key，不参与序列化：
+    - 序列化时只会对赋值的key进行序列化，没有赋值的不参与，在反序列化的时候直接给默认值即可；
+- 可变长度编码：
+    - 主要缩减整数占用字节实现，例如java中int占用4个字节，但是大多数情况下，我们使用的数字都比较小，使用1个字节就够了，这就是可变长度编码完成的事；
+- TLV：
+    - TLV全称为Tag_Length_Value，其中Tag表示后面数据的类型，Length不一定有，根据Tag的值确定，Value就是数据了，TLV表示数据时，减少分隔符的使用，更加紧凑；
+
+
+
+#### 2.5 ProtoBuf数据结构
+- 如何理解TLV结构
+    - TLV全称为Tag_Length_Value。
+    - Tag块并不是只表示数据类型，其中数据编号也在Tag块中，Tag的生成规则如下：Tag块的后3位表示数据类型，其他位表示数据编号。Tag中1-15编号只占用1个字节，所以确保编号中1-15为常用的，减少数据大小。
+    - 其中Length不一定有，依据Tag确定，例如数值类型的数据，使用VarInts不需要长度，就只有Tag-Value，string类型的数据就必须是Tag-Length-Value
+- 数据类型
+- 如何理解VARInts/Zigzag
+    - Varints是protobuf的序列化整型数据的一种编码方式，它的优点是整型数据的值越小，编码后所用的字节数越小。
+    - 先说实际问题：int值一般都是固定的4字节，但是实际开发中用到的数字均比较小，会造成字节浪费。
+    - 经过Varints编码后的数据，它的每一个字节8bit的高位代表一个标记位。
+        - 如果标记位是1，则代表下一个字节仍然是当前整型数据的组成；
+        - 如果标记位是0，则代表下一个字节就是下一个整型数据了。
+    - 先看最简单的数值1，一个字节足以表示它，所以它的标记位置0：0000 0001
+    - 再看数值300，经过Varints编码后的序列：1010 1100 0000 0010
+    - 
+
+
+
+
+
+#### 2.6 ProtoBuf优缺点
 - ProtoBuf优点
     - 性能：1.体积小，序列化后，数据大小可缩小3-10倍；2.序列化速度快，比XML和JSON快20-100倍；3.传输速度快，因为体积小，传输起来带宽和速度会有优化
     - 使用优点：1.使用简单，proto编译器自动进行序列化和反序列化；2.维护成本低，多平台仅需维护一套对象协议文件(.proto)；3.向后兼容性(扩展性)好，不必破坏旧数据格式就可以直接对数据结构进行更新；4.加密性好，Http传输内容抓包只能看到字节
@@ -183,7 +227,7 @@
 
 
 
-#### 2.5 创建proto文件
+#### 2.7 创建proto文件
 - proto文件基础介绍
     ``` protobuf
     syntax = "proto3";
@@ -220,7 +264,7 @@
 
 
 
-#### 2.6 ProtoBuf核心思想
+#### 2.8 ProtoBuf核心思想
 - 第一步：开发者首先需要编写.proto文件
     - 按照proto格式编写文件，指定消息结构。
 - 第二步：编译.proto文件生成对应的代码
@@ -231,6 +275,17 @@
     - 序列化方法用于创建和操作object，将它们转换为序列化格式，以进行存储或传输。调用toByteArray()方法将object转为byte字节数组。
     - 反序列化方法用于将输入的protoBuf数据转换为object。调用parseFrom(bytes)方法将bytes字节数据转为object对象。
     - 编译器完成它的工作后，开发人员所要做的，就是在发送/接收数据的代码中使用这些方法。
+
+
+
+#### 2.9 ProtoBuf总结
+- Protocol Buffer 利用 varint 原理压缩数据以后，二进制数据非常紧凑，option 也算是压缩体积的一个举措。
+    - 所以 pb 体积更小，如果选用它作为网络数据传输，势必相同数据，消耗的网络流量更少。但是并没有压缩到极限，float、double 浮点型都没有压缩。
+    - Protocol Buffer 比 JSON 和 XML 少了 {、}、: 这些符号，体积也减少一些。再加上 varint 压缩，gzip 压缩以后体积更小！
+    - Protocol Buffer 是 Tag - Value (Tag - Length - Value)的编码方式的实现，减少了分隔符的使用，数据存储更加紧凑。
+- Protocol Buffer 另外一个核心价值在于提供了一套工具，一个编译工具，自动化生成 get/set 代码。
+    - 简化了多语言交互的复杂度，使得编码解码工作有了生产力。
+    - Protocol Buffer 不是自我描述的，离开了数据描述 .proto 文件，就无法理解二进制数据流。这点即是优点，使数据具有一定的“加密性”，也是缺点，数据可读性极差。所以 Protocol Buffer 非常适合内部服务之间 RPC 调用和传递数据。
 
 
 
@@ -267,15 +322,15 @@
     - Client Streaming -从客户端向服务器发送一系列消息，服务器用一条消息作出回应。
     - Bidirectional streaming -客户端和服务器相互发送消息流的地方。
     ```
-    service RouteGuide {
-        //一个简单的 RPC，其中客户端使用存根向服务器发送请求并等待响应返回，就像普通的函数调用一样。
-        rpc GetFeature(Point) returns (Feature) {}
-        //服务器端流式 RPC，客户端向服务器发送请求并获取流以读取一系列消息。
-        rpc ListFeatures(Rectangle) returns (stream Feature) {}
-        //客户端流式 RPC，客户端写入一系列消息并将它们发送到服务器，再次使用提供的流。
-        rpc RecordRoute(stream Point) returns (RouteSummary) {}
-        //双向流式 RPC，双方使用读写流发送一系列消息。
-        rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
+    service Greeter {
+      // 简单一元模式
+      rpc simpleHello (Request) returns (Reply) {}
+      // 客户端流模式
+      rpc clientStream (stream Request) returns (Reply) {}
+      // 服务端流模式
+      rpc serverStream (Request) returns (stream Reply) {}
+      // 双向流模式
+      rpc bothFlowStream (stream Request) returns (stream Reply) {}
     }
     ```
 - 简单一元模式
@@ -438,7 +493,5 @@
 
 - 参考
   - https://km.woa.com/articles/show/568259?kmref=search&from_page=1&no=1
-  - https://km.woa.com/articles/show/546897?kmref=search&from_page=1&no=5
-  - https://km.woa.com/articles/show/565511?kmref=search&from_page=1&no=4
-  - https://km.woa.com/articles/show/451842?kmref=search&from_page=1&no=1
+
 
