--- a/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
+++ b/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
@@ -67,6 +67,11 @@
 
 
 #### 1.4 设计目标
+- 针对SDK安全要求
+    - 数据加密：开发者应该采取适当的加密措施，确保敏感数据在储存过程中得到保护。
+    - 安全传输：开发者需要规划安全的数据传输方式，如使用 HTTPS 协议来传输敏感数据，以及做好防止抓包或者攻击保护。
+    - 数据处理：开发者应该严格控制数据的访问权限，只允许有必要权限的组件对数据进行处理。
+
 
 
 #### 1.5 收益分析
@@ -98,8 +103,8 @@
         throw new RuntimeException(hostname + port + “ doesn’t response”);
     }
     ```
-- 这段代码将敏感信息包含在异常消息中，试想，如果是一个应用，异常也没有良好的包装起来，很有可能就把内部信息暴露给终端客户。
-- 对于安全标准特别高的系统，甚至可能要求敏感信息被使用后，要立即明确在内存中销毁，以免被探测；或者避免在发生 core dump 时，意外暴露。
+    - 这段代码将敏感信息包含在异常消息中，试想，如果是一个应用，异常也没有良好的包装起来，很有可能就把内部信息暴露给终端客户。
+    - 对于安全标准特别高的系统，甚至可能要求敏感信息被使用后，要立即明确在内存中销毁，以免被探测；或者避免在发生 core dump 时，意外暴露。
 
 
 
