--- a/Read/ReadBlogWiki/10.生活博客/02.生活感想大集合.md
+++ b/Read/ReadBlogWiki/10.生活博客/02.生活感想大集合.md
@@ -4,7 +4,6 @@
 - 03.思考旅行的意义
 - 04.遇事别总挣对错
 - 06.经济学机会成本
-- 07.机会成本和止损
 - 08.付出代价会回报
 - 09.避免费无效精力
 - 10.大多数人的建议
@@ -54,10 +53,10 @@
     - 而我们看的是，所谓的面子，对于当时我们这些一穷二白又渴望成功的年轻人，过度强调自尊其实是绊脚石。太要强太敏感的自尊，其实来源于自卑。
 - **拥有真本事会让人尊重**
     - 过分强调自尊和面子，其实是种没有见过世面的体现。因为层次越高的人，越不在乎他人眼中的面子。
-    - 以前有个领导，她说她刚毕业的时候，为了让大家觉得这不是个职场菜鸟，攒了好几个月工资，给自己从上到下买了一身名牌的行头，看起来特别职业。但是现在她都做到公司高层了，反而穿得越来越朴素简单。和她合作的，谈笑风生的，都是一些领域很厉害的人。
+    - 以前有个领导，她说她刚毕业的时候，为了让大家觉得这不是个职场菜鸟，攒了好几个月工资，给自己从上到下买了一身名牌的行头，看起来特别职业。
+    - 但是现在她都做到公司高层了，反而穿得越来越朴素简单。和她合作的，谈笑风生的，都是一些领域很厉害的人。
     - 她说，以前，需要一些名牌的东西，去撑起自己的体面，但一开口，还是因为不专业而露怯。但是，当你变得专业起来，有观点、有思想、有能力后，没有人因为你穿得不好不对而看不起你，更没有人因为你背了个几十万的包包而觉得你了不起。
     - 大家尊重一个人的标准，反而是看你真正拥有的本事。**因为本事越大，层次才会越高，看到的东西也不一样。面子和自尊从来不完全是别人给的，而是有部分靠自己的本事赚的**。
-
 
 
 
@@ -68,12 +67,13 @@
     - 吃个橙子说富含维C，吃个苹果说有益长寿，旅行也是如此，动不动就上升到精神层面，又是见多识广，又是洗涤灵魂。累不累？为什么不能勇敢地承认，吃东西就是因为好吃，出去玩就是因为好玩？
     - 这个问题其实很简单，想想身边刚旅行回来的朋友就懂了，你觉得他有改变吗？心胸宽广了吗，更好沟通了吗，工作能力更强了吗？得到的答案多半是否定的。
 - 旅行意义并非那么大
-    - 一个人的改变，极少源于广阔天边的风景。它们要么源于日积月累的琐碎、磨人生活，要么源于突如其来的人生巨变。一份日厮月磨的工作，一个长期磨合的伴侣，一个亲人的陡然离世，一个家庭的突生变故……相比于十天半个月的旅行，这些更能令人脱胎换骨。
+    - 一个人的改变，极少源于广阔天边的风景。它们要么源于日积月累的琐碎、磨人生活，要么源于突如其来的人生巨变。
+    - 一份日厮月磨的工作，一个长期磨合的伴侣，一个亲人的陡然离世，一个家庭的突生变故……相比于十天半个月的旅行，这些更能令人脱胎换骨。
     - 当然，如果一个人天天在路上，一年有半年都旅居国外，思维和眼界是会区别于常人。但这不是废话吗，一个有钱又有闲，可以常年出去玩的人，能是普通人吗？
 - 出去玩一趟谁不会呢
     - 能改变什么呢？可以发送心情，但是质的变化的确不容易……但问题的关键出在哪呢？旅游轻松愉快，读书艰难困苦，权衡之下，还是安慰自己出去玩更涨见识吧！
 - 当然不反对旅行
-    - 很反对把旅行这种事，扣上高大上的帽子。行万里路，原本是一件光风霁月的事。它应该是轻松的，自由的，无功利的，自内而外的愉悦和享受，而不该被赋予功利的意义，承载什么鬼灵魂升华的任务。
+    - 很反对把旅行这种事，扣上高大上的帽子。行万里路，原本是一件光风霁月的事。**它应该是轻松的，自由的，无功利的，自内而外的愉悦和享受，而不该被赋予功利的意义，承载什么鬼灵魂升华的任务**。
 
 
 
@@ -91,7 +91,7 @@
     - 发脾气骂人都两个小时了，如果你骂人有用，你接着骂，我们先回去。如果想解决问题，给一个好的解释，那我们一起想办法解决问题。”
     - 冷静下来，想想问题出在哪里，怎么解决呢？骂人是爽，占了上风的确很威风，可是有什么用？问题能解决吗？下一次是否能避免问题再次发生？
 - 记住两点事情
-    - 凡事记住两点：第一，你很贵，你的时间更宝贵，不要为一些小事浪费自己的宝贵时间。第二，凡事退一步海阔天空。对方没谋财没害命，不疼不痒的口角之争，都可以忽略不计。
+    - 凡事记住两点：**第一，你很贵，你的时间更宝贵，不要为一些小事浪费自己的宝贵时间。第二，凡事退一步海阔天空。对方没谋财没害命，不疼不痒的口角之争，都可以忽略不计**。
     - 适当地妥协和让步，会体现你的素质和修养。并且，人成熟以后，事情多得要命。要工作，要赚钱，要恋爱，要结婚，要生娃，要学习维护一段感情，要学习为人父母，要孝顺爸妈，要提升自己……
     - 总之，有好多就算永远不睡觉都做不完的事情。所以根本没必要与人较劲，争个上风下风。
     - 当然，如果对方确实是那种欺软怕硬、得理不饶人的人，也无须一再容忍，必须要让对方知道你也是有底线的人。
@@ -103,29 +103,34 @@
 ### 06.经济学机会成本
 - 经济学中有一个非常重要的概念——机会成本。
     - 一件事情的成本，并不是为了做这件事直接付出的代价，而是因为做这件事而不得不放弃的其他事情中，价格最贵的那个。
-- 说起来有些绕，举例解释一下就清楚了。你晚上去看电影，成本不仅仅是那张电影票和来回交通费，更主要的成本是，如果去看电影，那你晚上就不能做别的事情了。那晚上你可能做的其他事情，其中最重要的那个，再加上电影票等费用，才是你看电影的全部成本。
-- 如果那晚你本来可以和巴菲特一起吃饭聊天的，那么，你看电影的成本就很高了，高到很少有人能承受，因此，现实中，我们不会见到有人为了看电影而放弃和巴菲特共进晚餐。
-- 机会成本这个概念中，包含有“比较”的含义。理解了机会成本这个经济学概念以后，人们在思考问题时，就会具备一种经济学的思维方式：如果一个方案被否定了，被取消了，那么，取而代之的是什么？这个替代方案，和原来那个方案相比，是更好了，还是更差了？
+- 说起来有些绕，举例解释一下就清楚了。
+    - 你晚上去看电影，成本不仅仅是那张电影票和来回交通费，更主要的成本是，如果去看电影，那你晚上就不能做别的事情了。
+    - 那晚上你可能做的其他事情，其中最重要的那个，再加上电影票等费用，才是你看电影的全部成本。
+    - 如果那晚你本来可以和巴菲特一起吃饭聊天的，那么，你看电影的成本就很高了，高到很少有人能承受，因此，现实中，我们不会见到有人为了看电影而放弃和巴菲特共进晚餐。
+- 机会成本这个概念中，包含有“比较”的含义。
+    - 理解了机会成本这个经济学概念以后，人们在思考问题时，就会具备一种经济学的思维方式：如果一个方案被否定了，被取消了，那么，取而代之的是什么？
+    - 这个替代方案，和原来那个方案相比，是更好了，还是更差了？
 
 
-
-### 07.机会成本和止损
-- 选择错误，判断失误也是常有的，每个人都会犯这样的错误，但最大的错误不是判断失误，而是不知道止损。
-- 什么是不知道止损，公司拖欠几个月工资，如果一走了之就一分钱拿不回来，要不要继续等等看？答应的回报不兑现，或者支支吾吾不给明确承诺，明明老板信用不佳，还幻想着等老板良心发现可以兑现权益。为了一点离职补偿和违约金过度纠缠，浪费自己大量时间。
-- 如果你的损失不大，或者你的时间成本明显高于某些损失，那么，你花大量时间精力用于所谓维权，其实是挺愚蠢的事情。我发现很多年轻人容易陷入义愤，把大量时间精力放在无意义的维权争执上，那句话叫什么，咽不下这口气，如果你这么容易义愤，这个社会有太多能气死你的东西，习惯就好。
-- 以前有人问我，前东家欠他几个月工资，说多不多，说少也不少，问怎么维权，我说，找个好律师去处理，然后忙自己的事情，不要花精力在上面。那你如果觉得这点钱请律师的费用不值得，那就更不值得自己花精力去了。
 
 
 
 ### 08.付出代价会回报
 - 有人说，只要努力就会走向成功，这话本没有错。后来又看到一句话，想要回报，你需要付出代价，而回报的大小也取决于你付出了多少代价。
-- 对于成功的光鲜时刻，自然是人人想要，可很少有人真的舍得让自己付出相应的代价，太多的人嫌苦，嫌累，嫌创业的初期或者工作之中看人脸色，巴结奉承丢人现眼，但是对于真正急切的想要出人头地的人，这点事根本就算不上什么困难。
-- 我们大家都想要成功，想要博学，想要被喜欢，我们想要有很多的爱和很多的钱。至少我们以为自己是渴望的，可是我们却懒得为自己的渴望付出一丝一毫，讨厌屈就，也讨厌枯燥，讨厌虚与委蛇，讨厌示弱，讨厌加班，也讨厌重复。
-- 那些说“今天加班好累，就不看书了吧”的人，每到年终也总会为自己差了一大截的阅读计划懊丧不已。
-- 那些说“本来应该做三个备选方案的，但是最近太忙了”的人，在年终得不到加薪升职而忿忿不平。
-- 我曾经很想不通，为什么有些困难对一些人来说易如反掌，对另外一些却重于泰山。后来慢慢明白，浮于表面的欲望和扎根在心中的渴望，所激发的力量真的是不一样的。一个人无法管住自己的嘴，无法控制自己的腿，无法左右自己的心，并不是因为德行有亏或是智商有缺，而是因为那个你以为自己渴望着的东西，其实根本就没那么想要罢了。
-- 教条没用，鸡汤没用，鸡血也无法长久。面对自己既不喜欢又不需要的事，是很难尽全力争取的。那努力只流于表面，像是跟生活的一场赌气，那坚持只浅尝辄止，像是对这无聊节奏的挑衅。
-- 决定做一件事情前，咬牙坚持着把自己弄得辛苦又狼狈之前，不妨先问问自己吧：对于这件事，我到底为它付出多少代价？是否愿意为它牺牲休息时间加班工作，是否愿意为它放弃熬夜晚睡的习惯，是否愿意为它坚持不懈地看书，是否愿意为它持续付出，是否愿意为它承受枯燥与孤独，是否愿意为它承担经济损失的风险。我愿意为它放弃什么，又想通过它争取什么。欲带皇冠，必承其重。你愿意为它付出多大的代价，才有资格期冀多少回报。
+    - 对于成功的光鲜时刻，自然是人人想要，可很少有人真的舍得让自己付出相应的代价。
+    - 太多的人嫌苦，嫌累，嫌创业的初期或者工作之中看人脸色，巴结奉承丢人现眼，但是对于真正急切的想要出人头地的人，这点事根本就算不上什么困难。
+- 我们大家都想要成功，想要博学，想要被喜欢，我们想要有很多的爱和很多的钱。
+    - 至少我们以为自己是渴望的，可是我们却懒得为自己的渴望付出一丝一毫，讨厌屈就，也讨厌枯燥，讨厌虚与委蛇，讨厌示弱，讨厌加班，也讨厌重复。
+    - 那些说“今天加班好累，就不看书了吧”的人，每到年终也总会为自己差了一大截的阅读计划懊丧不已。
+    - 那些说“本来应该做三个备选方案的，但是最近太忙了”的人，在年终得不到加薪升职而忿忿不平。
+- 我曾经很想不通，为什么有些困难对一些人来说易如反掌，对另外一些却重于泰山。
+    - 后来慢慢明白，浮于表面的欲望和扎根在心中的渴望，所激发的力量真的是不一样的。
+    - 一个人无法管住自己的嘴，无法控制自己的腿，无法左右自己的心，并不是因为德行有亏或是智商有缺，而是因为那个你以为自己渴望着的东西，其实根本就没那么想要罢了。
+- 教条没用，鸡汤没用，鸡血也无法长久。
+    - 面对自己既不喜欢又不需要的事，是很难尽全力争取的。那努力只流于表面，像是跟生活的一场赌气，那坚持只浅尝辄止，像是对这无聊节奏的挑衅。
+    - **决定做一件事情前，咬牙坚持着把自己弄得辛苦又狼狈之前，不妨先问问自己吧：对于这件事，我到底为它付出多少代价**？
+    - 是否愿意为它牺牲休息时间加班工作，是否愿意为它放弃熬夜晚睡的习惯，是否愿意为它坚持不懈地看书，是否愿意为它持续付出，是否愿意为它承受枯燥与孤独，是否愿意为它承担经济损失的风险。
+    - 我愿意为它放弃什么，又想通过它争取什么。欲带皇冠，必承其重。你愿意为它付出多大的代价，才有资格期冀多少回报。
 
 
 
@@ -147,8 +152,7 @@
     - 对于大多数人来说，我们都处于自动模式下，很多行为和决策，都是按照无意识的常规方式和习惯而做出的，有些行为每天重复，几乎不需要有意识地监控他们，而不会有意识去考虑或反思这么做到底有没有道理。一旦开始了一项常规活动，就会电脑程度一样一直运行下去，直到任务完成或是被打断。
     - 在每一个任务完成或中断一个任务的时间都是匆忙略过，做一些感觉很高效或让自己舒服的事情，然后就进入一种自动模式中，完全感觉不到时间的浪费。
 - **可以用如何--就的方式来总结：**
-    - 如何(再遇到什么情况、环境)---　就（行为：如何去做）
-    例：
+    - 如何(再遇到什么情况、环境)---　就（行为：如何去做）。例：
     - 1.与淘宝商家讨价还价，为了15元的邮费是否包邮，争论了一个小时。
         - 如果（下次在到在淘宝上买东西）就（限制在5分钟之间选择一下，直接付费）
     - 2.看好了一个的手机后，为了得到更低的价格，在所有的淘宝经销商中挑来选去。犹豫了好几天，还承受着假冒的风险，就为了再便宜几百元钱。
@@ -162,15 +166,15 @@
     - 你会经常寻求他人的建议吗？或者你身边的家人、朋友、同事会经常向你寻求建议吗？你又是如何回应的呢？
     - 对于大部分问题，他也没有办法给出具体的建议。其实，这是存在于大多数人之间的普遍现象。
 - 为何向别人寻求建议
-    - 当你需要寻求别人的建议时，那一定意味着你面临决策了。做决策就需要有选择，但是在大多数情况之下，没有人把选项摆在你的面前。
+    - 当你需要寻求别人的建议时，那一定意味着你面临决策了。**做决策就需要有选择，但是在大多数情况之下，没有人把选项摆在你的面前**。
     - 这时你就需要自己找到选项。但不管有没有选项，寻求建议本质上，是需要做决策。
-    - 做决策需要两件事情：信息环境，决策模型。充分、客观的信息环境，是做出正确决策的依据。如果你所处的信息环境里，有严重的信息缺失，甚至信息扭曲，那你就很难做出正确的决策。
+    - 做决策需要两件事情：**信息环境，决策模型**。充分、客观的信息环境，是做出正确决策的依据。如果你所处的信息环境里，有严重的信息缺失，甚至信息扭曲，那你就很难做出正确的决策。
 - 你其实是期待一个结论
     - 很多人在寻求别人建议的时候，都只是想寻求一个确定的结论：你就告诉我应该怎么做就好了。
     - 有时候这会忽略了信息环境这个因素。在大多数情况下，你的信息环境是自己私有的，只有你自己知道。这就意味着，别人在信息环境缺失的情况下，不可能给你一个确定的结论。
 - 什么是决策模型的建议？
     - 如果是第 1 种情况，你应该怎么办？如果是第 2 种情况，你应该怎么办？如果是第 3 种情况，你应该怎么办？这就是决策模型的建议。
-    - 这些决策模型可能并不全面。但是，向别人寻求建议的时候，你要知道，因为信息环境不充分，你能得到的也就只会是决策模型。
+    - 这些决策模型可能并不全面。**向别人寻求建议的时候，你要知道，因为信息环境不充分，你能得到的也就只会是决策模型**。
 - 不要期待能够直接得到结论
     - 向别人寻求建议时，不要期待能够直接得到结论。对方能够给到你的，最多只是决策模型。你需要把自己的信息环境带入决策模型里，再根据自己的价值观，做出最终决策。
     - 当你做出决策之后，不管结果如何，你都要为自己的决策负全责。给你建议是对方的情分，而做出决策是自己的责任。在你给别人建议时，也是同样的道理。
@@ -184,8 +188,10 @@
     - 是一种长时间停留在没有成长的重复状态。好比一颗成熟了的卷心菜，始终在原地卷自己，既不会再长高了，也不会再变大了，从此停滞不前。
 - 从“内卷化”忙碌中突围
     - 打破“内卷化”困境有两大出路，一是技术革新，二是对外开放。
-    - 对个人来说，人很容易进入一种故步自封的状态，这有可能是由于自己的生活环境过度安逸所导致的，长期处于一种很稳定、周围没什么变化的环境，也很有可能走入这种状态。因此多尝试新的事物，开启新的循环，制造机会让自己尝到甜头是一个不错的方法。
-    - 生活中，我们困苦于自己不管是在学习上还是工作上都毫无进步，而且有时候和家人朋友的关系也越来越不顺畅，自己要么变得越来越压抑，要么就是自暴自弃。这些状态都是“内卷化”的结果。它会让人在一个层面上无休止的内耗，既没有突破式的增长，也没有渐进式的积累，让人陷入一种恶性循环之中。
+    - 对个人来说，人很容易进入一种故步自封的状态，这有可能是由于自己的生活环境过度安逸所导致的。
+    - **长期处于一种很稳定、周围没什么变化的环境，也很有可能走入这种状态。因此多尝试新的事物，开启新的循环，制造机会让自己尝到甜头是一个不错的方法**。
+    - 生活中，我们困苦于自己不管是在学习上还是工作上都毫无进步，而且有时候和家人朋友的关系也越来越不顺畅，自己要么变得越来越压抑，要么就是自暴自弃。
+    - 这些状态都是“内卷化”的结果。**它会让人在一个层面上无休止的内耗，既没有突破式的增长，也没有渐进式的积累，让人陷入一种恶性循环之中**。
     - 一旦陷入“内卷化”状态，就如同车入泥潭，裹足不前，无谓地耗费着有限的资源。长期以来，只会在一个简单层次上自我重复，浪费着宝贵的人生。
 
 
@@ -198,20 +204,19 @@
     - 大部分人都有过给自己打鸡血的经历，以为逼一逼自己，就可以过上持续性自律充实的生活，但却事与愿违，惨败收场。
     - 以致于后来很长一段时间里，对“自律”这个词都有一种厌烦心理，坚持的勇气和信仰早已碎了一地。
     - 事实上，很多人的问题和误区在于短时间内用力过猛，总是希望通过自己强大的意志力来维持长期的马拉松式坚守。
-    - 想要通过意志力来达成自律，强迫自己形成一种自律的生活方式，往往是行不通的。
-    - 要知道，任何一件事情需要你费力地坚持，心累地持续，那往往你也坚持不了太久。
+    - **想要通过意志力来达成自律，强迫自己形成一种自律的生活方式，往往是行不通的。要知道，任何一件事情需要你费力地坚持，心累地持续，那往往你也坚持不了太久**。
 - 要追求的不是自律，而是自驱
     - 人本来就有趋利避害的本性，我们喜欢做让自己感觉良好的事情，不喜欢做让自己感觉糟糕的事情。
     - 当我们要启动意志力来做一件事情的时候，是我们暂时违背人的本性，远离让自己的欲望以及感觉好的事情，去做那些会让我们感到不适但却“正确”的事情。
     - 理性思考可以影响我们的选择，但最终，我们内在的真实感受决定了我们会去做什么。
     - 比如早起这件事，对于想要开始早起的人来说，这就是一种自律。而对于习惯早起的人，早起不仅毫不费劲，而且还理所应当，这不是自律，而是自驱。
-    - 所谓自驱，就是你顺应了内心的某种真实的感受，然后让那个感受来引导你去做那些“正确”的事情。
+    - **所谓自驱，就是你顺应了内心的某种真实的感受，然后让那个感受来引导你去做那些“正确”的事情**。
 - 自驱背后的心智模式
     - 每个人都有自己的生活方式，而所谓生活方式，就应该是可持续，毫不费力。
     - 一个人追求自驱，背后所隐藏的是一种“Be - Do - Have”的心智模式。
-    - 先明确自己想成为什么样的人，然后才会去想做些什么，之后才会有自律的行动，最后梦寐以求的东西也会随之渐渐显现。
+    - **先明确自己想成为什么样的人，然后才会去想做些什么，之后才会有自律的行动，最后梦寐以求的东西也会随之渐渐显现**。
     - 人的内在定位准了，需求改变了，行动自然也就变了。而这样的行动，因为有了持续的内在刚需作驱动，所以才会变得自律而长久。
-    - 为你所做的事情赋予了足够的意义。而一件事情，赋予了意义，你就能够找到耐心坚持的动力。
+    - **为你所做的事情赋予了足够的意义。而一件事情，赋予了意义，你就能够找到耐心坚持的动力**。
     - 当你不再依赖于意志力，当你不再追求所谓的自虐式律己，而是接纳自己，开启一种自我驱动的模式去做一件事情，那你就会找到属于你的生活节奏。
 
 
@@ -239,14 +244,17 @@
 
 ### 14.承认自己能力有限
 - **害怕自己不够意思**
-    - 当别人求助于我的时候，我内心往往非常抵触，却又怕别人说我是所谓的“不够意思的人”，于是硬着头皮去做自己不喜欢做的事情。有一次特别受伤的时候，突然一闪念，想明白，原来这种尴尬本质上并不是来自于我没有“乐于助人”的品性，而是来自于我自己的精力并不足够旺盛，没有旺盛到处理自己的事情绰绰有余的同时，还有大把的时间精力用来帮别人做事。
+    - 当别人求助于我的时候，我内心往往非常抵触，却又怕别人说我是所谓的“不够意思的人”，于是硬着头皮去做自己不喜欢做的事情。
+    - 有一次特别受伤的时候，突然一闪念，想明白，原来这种尴尬本质上并不是来自于我没有“乐于助人”的品性，而是来自于我自己的精力并不足够旺盛，没有旺盛到处理自己的事情绰绰有余的同时，还有大把的时间精力用来帮别人做事。
     - 事实上，我自己根本己经是正在过河的泥菩萨。后来，我开始怀疑，雷锋的领导是否太白痴，因为他没有给自己的下属分配足够的工作。这是那天晚上与我来讲非常惊喜的一件事儿，因为我发现我正在独立思考。
 - **承认自己能力有限**
-    - 承认自己能力有限，是心理健康的前提。从重新思考雷锋的领导那天开始，挣扎着去学习如何做事量力而行。说起来好笑，自己的智商有限到过去竟然没想到“量力而行”是如此高难度的行为模式：1)承认自己能力有限；2)不怕在别人面前露怯；3)敢于不去证明自己是“好人”……
+    - 承认自己能力有限，是心理健康的前提。从重新思考雷锋的领导那天开始，挣扎着去学习如何做事量力而行。
+    - 说起来好笑，自己的智商有限到过去竟然没想到“量力而行”是如此高难度的行为模式：1)承认自己能力有限；2)不怕在别人面前露怯；3)敢于不去证明自己是“好人”……
 - **不要对有些人大度**
     - 有的时候人就是这样，你越大度，别人就越得寸进尺。有句话说，忍一时越想越气，退一步越想越亏。别不好意思拒绝别人，反正那些好意思为难你的人也没替你想过。
 - **学会合理拒绝**
-    - 人人都告诉你，做人要善良。这没什么问题，但做人最大的问题，就是不会拒绝。不懂得拒绝的人，一次、两次，会有后来的无数次。你即使把自己累死，也不会得到别人真正的尊重。因为对方习惯了你的顺从，你的“好心”。成全了别人，恶心了自己。滋味难受。
+    - 人人都告诉你，做人要善良。这没什么问题，但做人最大的问题，就是不会拒绝。不懂得拒绝的人，一次、两次，会有后来的无数次。
+    - 你即使把自己累死，也不会得到别人真正的尊重。因为对方习惯了你的顺从，你的“好心”。成全了别人，恶心了自己。滋味难受。
 
 
 
@@ -258,7 +266,7 @@
     - 公司一直在发展，如果员工的自我更新无法跟上公司发展，就容易被落下甚至被淘汰。
 - 一年经验用 N 年的员工，有哪些特点？
     - 很多职场人表面看上去经验丰富，其实只是把 1 年经验用了 N 年。
-    - 具体来看，这些职场人有以下 3 个特点：1.工作中思维模式固化；2.陷入低水平勤奋陷阱；3.自我提高内驱力较低
+    - 具体来看，这些职场人有以下 3 个特点：**1.工作中思维模式固化；2.陷入低水平勤奋陷阱；3.自我提高内驱力较低**。
 - 1.工作中思维模式固化。
     - 固定型思维的人认为人的能力是一成不变的。他们会以这个为依据，规划自己以后的人生。这类员工往往缺乏长远的眼光，容易被职业生涯中的变动打得措手不及。
     - 在信息爆炸时代，工作中思维模式固化带给职场人的负面影响，远比你想象的要大得多。
@@ -312,7 +320,7 @@
 - 为何成为有趣人
     - 想要使自己具有更加独特的价值？亦或是想要让自己能摆脱千篇一律的生活色彩？无非就是想改变别人对自己的看法或自己对本身的态度。
     - 成为一个有趣的人，最重要的是成为一个独特的人，而一个独特的人，最重要的是有一颗独特的心（灵魂？）。
-    - 读书、写字、旅游、生活——凡是你能想到提升自己什么见识、智慧这些内在东西的最终目的不都是让你给别人的感觉不一样吗?
+    - **读书、写字、旅游、生活——凡是你能想到提升自己什么见识、智慧这些内在东西的最终目的不都是让你给别人的感觉不一样吗**?
     - 换句话说就是使自己与他人不同，即为独特，即为有趣。有点鹤立鸡群的感觉，但又不能就这样张开翅膀拍拍走人，这样的叫隐士。
 - 如何让自己有趣
     - 1、经常看一些有趣的书籍或者电影，丰富自己的幽默见识，记录下一些有趣的小段子；
