--- a/Read/ReadBlogWiki/10.生活博客/04.生活沟通的记录.md
+++ b/Read/ReadBlogWiki/10.生活博客/04.生活沟通的记录.md
@@ -21,8 +21,7 @@
 
 ### 01.批评的沟通方式
 - 注意批评的目的
-    - 批评：不是告诉对方他怎么错了，而是用谈心的方式具体的告诉他怎么才能做对。
-    - 刷新信息，刷新认知，把错误的行为覆盖掉，让新的局面得以呈现。
+    - 批评：不是告诉对方他怎么错了，而是用谈心的方式具体的告诉他怎么才能做对。刷新信息，刷新认知，把错误的行为覆盖掉，让新的局面得以呈现。
 - 批评沟通的动作
     - 1.场合上的控制。能一对一的时候就不要当看他人的面批评，能小范围的时候就不要在大范围批评。
     - 2.时间上的控制。批评最好发生在对方做错后的第一时间，不要翻旧账。
