--- a/Read/ReadBlogWiki/10.生活博客/06.不为人知的哲学.md
+++ b/Read/ReadBlogWiki/10.生活博客/06.不为人知的哲学.md
@@ -4,7 +4,8 @@
 - 04.张仲平的送礼艺术
 - 05.普通人要学会借力
 - 06.不要怕被别人利用
-- 07.挣钱和陪孩子重要性
+- 07.挣钱和陪孩子讨论
+- 08.韭菜的修养和心理
 
 
 
@@ -113,13 +114,12 @@
     - 杜月笙说“不要怕被别人利用，人家利用你说明你还有用。”一个人只要诚心诚意做事，不计较一时回报，不攀比周边待遇，迟早会有出头之日。
 
 
-### 07.挣钱和陪孩子重要性
-
-- 能唤醒多少人就唤醒多少人吧。我可以负责任的告诉各位，家庭陪伴和资本主义国家的快乐教育一样，是育儿理论的两大毒瘤，坑害了多少无知的家长，让多少无知的家长放弃了自己的成长、孩子的成长。
-- 我可以明确告诉你答案：挣钱的重要性是第一位的，绝对的第一。再也不要相信什么陪伴能给孩子完善的人格、幸福的童年了。
+### 07.挣钱和陪孩子讨论
+- 家庭陪伴和资本主义国家的快乐教育一样，是育儿理论的两大毒瘤，坑害了多少无知的家长，让多少无知的家长放弃了自己的成长、孩子的成长。
+- 我的想法是：挣钱的重要性是第一位的，绝对的第一。再也不要相信什么陪伴能给孩子完善的人格、幸福的童年了。
 - 当你的孩子大学毕业，为了找工作而发愁；当你孩子结婚了，为了彩礼嫁妆而为难；
-- 当你的孩子事业家庭遇到困惑而你毫无办法的时候，你就知道你年轻挣钱的重要性了，你就知道提升自己才是最好的陪伴的意义了。
-- 几个论点：第一，你要明白，从古至今，由内到外，人类社会的残酷事实就是拼爹。
+- 当你的孩子事业家庭遇到困惑而你毫无办法的时候，你就知道你年轻挣钱的重要性了，你就知道提升自己才是最好的陪伴的意义了。几个论点：
+- 第一，你要明白，从古至今，由内到外，人类社会的残酷事实就是拼爹。
     - 古代也好、现代也好、中国也好、外国也好，无不是拼爹的社会。什么公平、平等，都是骗人的。
     - 告诉你们几个事实，唐以前中国官员的升迁是推举制的，也就是说你爹是大官，就推荐你当官，你爹是农民，你连衙门的门都摸不着，只能世世代代当农民。
     - 科举制以后，照样是拼爹的时代，千万不要被那些影视剧给迷惑了。
@@ -173,8 +173,36 @@
     - 干瞪眼？醒醒吧，一定不要再有这样的疑问了，从现在起，鸡自己，好好工作，努力挣钱，给孩子好的榜样，让孩子看到你为家庭做出的努力，让孩子知道只有努力才有收获。这才是正确的教育。
 
 
-
-
+### 08.韭菜的修养和心理
+- 韭菜的心理特性
+    - 韭菜的心理特性，贪婪，焦虑，缺乏耐心。小杨我暂时就想到这个词语……
+    - **稳健投资，或者职场上积极进取，但觉得太慢，算算要五年？十年？等不及，希望一年，两年就达标，然后去他妈的爱谁谁吧**。
+    - 人性这玩意很厉害，你以为自己很客观，很理性，一旦发现钱进来的很容易，什么都失控了。信息分析的能力完全取决于个人的价值取向，风险意识近乎彻底丧失。
+    - 贪婪，焦虑，缺乏耐心，希望短时间快速获得超过自己能力范畴的财富，甚至达成财富自由，就成为最好的收割对象，而那些割手们，最擅长的就是做出符合你预期的行为。
+- 给你想要的故事
+    - **承诺你有快速获利的机会，奉承你有超越你真实水平的能力，（要不天上怎么会掉馅饼呢），提供给你符合你价值取向的信息，所谓一夜暴富的故事和各种案例**。
+    - **并且最重要的，不需要你做出深度的学习，复杂的操作，以及种种需要专业技能才能完成的事务**。只需要你最简单的操作，第一步，转钱；第二步，拉拢新人。
+    - 人们喜欢听那些一夜暴富的故事，喜欢成为不劳而获的人，喜欢找短线投机而快速山鸡变凤凰的机会。于是这样的文章，这样的自媒体，这样的项目就层出不穷，那些文章写的更讨喜，更适合传播，也更具有煽动性。更可怕的是，那些例子是真的。
+    - 人们不愿意去思考诸如概率，可行性，风险评估这样繁琐的东西，就好比你去银行买个理财产品，你会看理财产品风险评估报告么？很多人都不看的。
+    - 人们不容易理解，个例与普适性的关系，有人在澳门赢了几千万不等于你去澳门就能赢几千万，有人学了周易后投中独角兽不等于你学了周易可以投中独角兽。
+    - 人们也不容易理解，时间窗口的意义和价值，曾经被认为不可行的东西变得可行，曾经可行的东西变得不可行。
+    - **人们容易相信，如果一个大佬很有钱，那么他说的一切都很值钱。就像在我老家农村，你赚到钱了，你就牛逼说话有份量。**
+- 核心仍然是逻辑
+    - 天上不会掉馅饼，发财的机会，非亲非故的凭什么给你。无风险高回报的项目，从古至今，从中到外，早都被国家机构垄断了，动动脑子哪里会落到你这里。
+    - **羊毛出在羊身上，所有的便宜总要有人付出成本，你以为你是谁？为啥别人跟你非亲非故，有好项目好想法，要跟你分享或者带着你做，而不是带着亲戚做呢？**
+    - 还有就是贪小便宜真的真的容易吃亏。就是你能用很便宜的价钱，有机会获得看上去很昂贵的东西。
+    - **贪便宜不能说一定是坏事，但是有一点很重要，就是如果这个便宜非常不合理，那几乎肯定一定是有问题的。**
+- 不要太过于自信
+    - 对自己利益相关的东西，一旦产生投资判断，就开始过度相信自己的判断，这也跟选择性阅读有关，当你与某个事情利益紧密关联的时候，你很难保证自己的立场和判断力保持公允。
+    - 在网上浏览，搜索的时候，所有与你利益价值取向一致的，都会被你认为是好文章，好内容，从而加深你的偏见；而所有与你利益价值取向不一致的，很容易被当作是胡扯，不懂，瞎掰。
+    - 即便骗局被揭穿，即便谎言被戳破，还会找借口安慰自己，那揭穿的骗局只是表象，一定还会有更深入的真相尚未公开，自己不会输，只是暂时真相被蒙蔽。
+    - 这就是韭菜的觉悟，你试图去拯救的时候，却发现他们根本执迷不悟。
+- 庞氏骗局的危害
+    - 一旦你指出某个项目，某个平台，是庞氏骗局，总有人出来证明说，你说的不对，我知道很多人谁谁谁用这个平台，赚到钱了。
+    - **在庞氏骗局崩盘之前，一定是有人在中间有收益的，一定是有很多正面案例来吸纳下一波韭菜的**，否则这个骗局怎么能成立呢？
+    - **然后就出现了这样一个“聪明”韭菜群体，他们明知道或者可能知道是割韭菜，是传销，是骗局，但是他们觉得，只要自己不是最后一棒，捞一笔就走**。
+    - 这样的人现在其实越来越多，对整个消费环境的伤害也越来越大。**万一没有跑路成功，他们就会哭诉自己是受害者，找政府要说法，而他们却忽略被他们带进来的那些受害者，其实这样的人就是个缺德大傻逼**。
+    - 其实有个想法，觉得类似传销骗局，金融骗局，出问题后，**不但要追究平台的责任，还要让每个受害者有权去追责自己上家，就是那个带你入门的上家，可能是亲戚，但有没有想过后果以及这个后果自己又是否能承担起**。只有上家被追责这个形成风气，才能根本上斩断这种割韭菜的市场空间。
 
 
 
