--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -9,7 +9,7 @@
     - 2.2 ProtoBuf和json
     - 2.3 ProtoBuf问题思考
     - 2.4 ProtoBuf特点
-    - 2.5 ProtoBuf数据结构
+    - 2.5 ProtoBuf存储格式
     - 2.6 ProtoBuf优缺点
     - 2.7 创建proto文件
     - 2.8 ProtoBuf核心思想
@@ -23,6 +23,7 @@
     - 3.6 同步和异步操作
     - 3.7 gRPC一些操作
     - 3.9 gRPC问题解决
+    - 3.10 理解gRPC协议
 - 04.gRPC通信实践
     - 4.1 gRPC通信技术点
     - 4.2 核心设计思路
@@ -190,23 +191,12 @@
 
 
 
-#### 2.5 ProtoBuf数据结构
-- 如何理解TLV结构
-    - TLV全称为Tag_Length_Value。
+#### 2.5 ProtoBuf存储格式
+- 如何理解TLV结构：TLV全称为Tag_Length_Value
     - Tag块并不是只表示数据类型，其中数据编号也在Tag块中，Tag的生成规则如下：Tag块的后3位表示数据类型，其他位表示数据编号。Tag中1-15编号只占用1个字节，所以确保编号中1-15为常用的，减少数据大小。
-    - 其中Length不一定有，依据Tag确定，例如数值类型的数据，使用VarInts不需要长度，就只有Tag-Value，string类型的数据就必须是Tag-Length-Value
-- 数据类型
-- 如何理解VARInts/Zigzag
-    - Varints是protobuf的序列化整型数据的一种编码方式，它的优点是整型数据的值越小，编码后所用的字节数越小。
-    - 先说实际问题：int值一般都是固定的4字节，但是实际开发中用到的数字均比较小，会造成字节浪费。
-    - 经过Varints编码后的数据，它的每一个字节8bit的高位代表一个标记位。
-        - 如果标记位是1，则代表下一个字节仍然是当前整型数据的组成；
-        - 如果标记位是0，则代表下一个字节就是下一个整型数据了。
-    - 先看最简单的数值1，一个字节足以表示它，所以它的标记位置0：0000 0001
-    - 再看数值300，经过Varints编码后的序列：1010 1100 0000 0010
-    - 
-
-
+    - Length不一定有，依据Tag确定，例如数值类型的数据，使用VarInts不需要长度，就只有Tag-Value，string类型的数据就必须是Tag-Length-Value
+    - Value:消息字段经过编码后的值
+    - ![image](https://img-blog.csdnimg.cn/515c8ab9fa024acfa2cfd928b662b538.png)
 
 
 
@@ -255,7 +245,7 @@
 - 导入外部包：import
     - 通过import声明符可以引用其他.proto里的结构数据体
 - 消息定义：message
-    - ProtoBuf中，消息即结构化数据。其中变量的声明结构为：字段规则 + 字段类型 + 字段名称 + [=] + 标识符 + [默认值]
+    - ProtoBuf中，消息即结构化数据。其中变量的声明结构为：字段规则 + 字段类型 + 字段名称 + 【=】 + 标识符 + 【默认值】
     - 字段规则有：optional: 结构体可以包含该字段零次或一次（不超过一次）；repeated: 该字段可以在格式良好的消息中重复任意多次（包括0），其中重复值的顺序会被保留，相当于数组
 - 定义服务：service
     - 如果想要将消息类型用在RPC(远程方法调用)系统中，可以在.proto文件中定义一个RPC服务接口，ProtoBuf编译器将会根据所选择的不同语言生成服务接口代码及stub。
@@ -439,13 +429,18 @@
 
 
 
+#### 3.10 理解gRPC协议
+- gRPC基于HTTP/2/协议进行通信，使用ProtoBuf组织二进制数据流，gRPC的协议格式如下图：
+    - ![image](https://img-blog.csdnimg.cn/22a109e2d9f141f8806f21c3d6fa05b8.png)
+- gRPC协议在HTTP协议的基础上，对HTTP/2的帧的有效包体(Frame Payload)做了进一步编码：gRPC包头(5字节)+gRPC变长包头，其中：
+    - 5字节的gRPC包头由：1字节的压缩标志(compress flag)和4字节的gRPC包头长度组成；
+    - gRPC包体长度是变长的，其是这样的一串二进制流：使用指定序列化方式(通常是ProtoBuf)序列化成字节流，再使用指定的压缩算法对序列化的字节流压缩而成的。如果对序列化字节流进行了压缩，gRPC包头的压缩标志为1。
+
+
+
 ### 05.ProtoBuf核心原理
 #### 5.1 ProtoBuf数据结构
-- ProtoBuf 数据结构
-    - 采用 TLV存储方式，即TAG-Length-Value(标识-长度-字段值)
-    - 不需要分隔符就能分隔开字段，减少了分隔符的使用;
-    - 各字段存储得非常紧凑，存储空间利用率非常高;
-    - 若字段没有被设置字段值，那么该字段在序列化时的数据中是完全不存在的，即不需要编码
+
 
 
 #### 5.2 ProtoBuf编码方式
@@ -487,8 +482,7 @@
     - https://zhuanlan.zhihu.com/p/576031935
 - Protobuf 使用介绍及原理
     - https://gitee.com/chenjim/ProtoBuf
-- protobuf实现原理,protobuf语法
-    - https://www.zhangshilong.cn/work/268633.html
+
 
 
 
